# runtime-viz

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
meminf/: CMakeLists.txt  malloc_trace.cc  malloc_trace.h
memtrack/: CMakeLists.txt  access_compression.cc  access_compression.h  cu_memtrack.cc  cu_memtrack.h  json.cc  json.h  logging.cc  logging.h  malloc_track.cc  malloc_track.h  memtrack.h  util.cc  util.h
test-apps/blurring/: CMakeLists.txt  common.cu  conv_gpu.h  conv_gpu_all.cu  conv_gpu_cmem.cu  conv_gpu_gmem.cu  conv_gpu_smem.cu  filtering.cc  image.cu
test-apps/matmul/: CMakeLists.txt  main.cc  matmul.cu  matrix.cu  mul_cpu.cc  mul_gpu.cu  test.h
test-apps/vectoradd/: CMakeLists.txt  vectoradd.cu
tests/: test_compression.cc
tools/mem_trace/: CMakeLists.txt  common.h  device_clock.cu  device_clock.h  inject_funcs.cu  mem_acc_recorder.cpp  mem_acc_recorder.h  mem_trace.cu
visualization/: .gitignore  buffer.py  color_legend.py  heatmap.py  help_text.py  input.py  main.py  preprocessing.py  requirements.txt  time_information.py  visualization.py
visualization/data/: buffer.py
visualization/testinput/: test01.bson  test01.json  test02.json
visualization/tools/: time_extractor.py
visualization/util/: bson_translator.py
